--- a/wizards/WizardsWeb/Views/Exploration/Index.cshtml
+++ b/wizards/WizardsWeb/Views/Exploration/Index.cshtml
@@ -26,7 +26,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Titan Raids</h5>
                     <p class="card-text">
-                        Conquer legendary mystic creatures around the world! Reach the Lairs of most dangerous enemies and fight with them for glory and theirs treasures!
+                        Conquer legendary mystic creatures around the world! Reach the Lairs of most dangerous enemies and fight them for glory and treasures!
                     </p>
                     <br/>
                     <a class="gbtn gbtn-action" asp-controller="Exploration" asp-action="TitanRaids">Select Your Enemy</a>
