--- a/wizards/WizardsWeb/Views/Exploration/TitanRaids.cshtml
+++ b/wizards/WizardsWeb/Views/Exploration/TitanRaids.cshtml
@@ -12,7 +12,7 @@
     <div class="col-12 p-1 mb-3 bg-paper-color rounded">
         <div class="row">
             <div class="col-8 px-3 py-1">
-                <h4 class="font-weight-bold pl-3 pt-1">Titan Rides</h4>
+                <h4 class="font-weight-bold pl-3 pt-1">Titan Raids</h4>
             </div>
             <div class="col-4 px-2 py-1">
                 <a asp-controller="Exploration" asp-action="Index" class="gbtn gbtn-action">
