--- a/wizards/WizardsWeb/Views/Hero/EditAvatar.cshtml
+++ b/wizards/WizardsWeb/Views/Hero/EditAvatar.cshtml
@@ -50,12 +50,12 @@
                     <div class="row">
                         @for (int i = 1; i <= 7; i++)
                         {
-                            var image = $"Images/Hero/Avatars/Wizard-{i}.png";
+                            var imageAddress = $"Images/Hero/Avatars/{Model.Profession.ToString()}-{i}.png";
                             <div class="col-sm-3">
                                 <div>
                                     <label>
                                         <input asp-for="AvatarImageNumber" type="radio" value="@i"/>
-                                        <img class="p-1" src="~/@image" width="80%" height="80%"/>
+                                        <img class="p-1" src="~/@imageAddress" width="80%" height="80%"/>
                                     </label>
                                 </div>
                             </div>
